- Create the destination folder (out) if it does not already exists - added the tag copyDocs to copy MS Word Documents into the destination folder
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@205867 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Documents/Makefile
+++ b/Documents/Makefile
@@ -40,10 +40,14 @@ listDocs:
 		    echo "   $${member}" ;\
 		done
 
-all: loginfo svnUpdate changeLog acsarchitectureupd docs
+all: prep loginfo svnUpdate changeLog acsarchitectureupd docs copyDocs
 
 #docs: $(PDFDOCS)
 
+prep:
+	if [ ! -d $(DESTDIR) ]; then \
+		mkdir $(DESTDIR); \
+	fi
 docs:
 	# Convert LibreOffice and MS Word docs into pdf
 	@./LibreOfficeDocumentConverter.sh $(DESTDIR) $(ALLDOCS)
@@ -68,4 +72,7 @@ changeLog:
 	@echo >> $(DESTDIR)/changeLog.txt
 	@svn log -v >> $(DESTDIR)/changeLog.txt
 	@echo "ChangeLog generated."
+	
+copyDocs:
+	cp $(ALLDOCS) $(DESTDIR)
 
