Casa is build by ICD/SharedCode/thirdParty/casacore instead of being distributed as a tar file (@see ICTJ:ICT-2290).
As a consequence ACS removed all the dependencies and arrangements for CASA (ICTJ:ICT-3102).

From a user point of view the casaContainer type modifier for container must be changed to fortranContainer
and must be set for all the containers that need to preload the fortran library.
For that reason:
- acsStartContainerWithCASA has been renamed to acsStartContainerWithFortran
- acsAwaitContainerStart accepts a parameter -F for fortran container instead -C for CASA


git-svn-id: https://alma-svn.aoc.nrao.edu/p2/branches/2014-02-ACS-B/ACS@206355 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsutil/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acsutil/ws/src/Makefile
@@ -110,7 +110,7 @@ acsutil_LIBS    = acscommonStubs
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         = acsutilTATPrologue acsutilTATEpilogue acsutilTATTestRunner acsutilProfiler acsutilDiffTrap acsutilRedo \
-		  acsutilBlock acsutilAwaitContainerStart acsutilCASAPython acsutilCASAEnv python ipython
+		  acsutilBlock acsutilAwaitContainerStart ipython
 SCRIPTS_L       = 
 
 #
@@ -122,7 +122,7 @@ TCL_SCRIPTS_L   =
 #
 # Python scripts (public and local)
 # ------------------------------
-PY_SCRIPTS     = acsutilCASAPathInsert
+PY_SCRIPTS     = 
 PY_SCRIPTS_L   =
 
 #
