Python test removed because ACS does not have to deal with CASA tar anymore (@see ICTJ:ICT-3102)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/branches/2014-02-ACS-B/ACS@206367 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsutil/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsutil/ws/test/Makefile
@@ -98,7 +98,7 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =  testacsutilBlock
-SCRIPTS_L       =  testPython 
+SCRIPTS_L       =   
 
 #
 # list of all possible C-sources (used to create automatic dependencies)
