added: MAKE_NOIFR_CHECK = on
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@206370 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/maci/ws/test/Makefile
+++ b/LGPL/CommonSoftware/maci/ws/test/Makefile
@@ -17,6 +17,7 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
+MAKE_NOIFR_CHECK = on
 
 USER_CFLAGS =
 USER_LIB =
