ICTJ:ICT-3335 Added AnyAide tests
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@207194 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcontnc/test/Makefile
+++ b/LGPL/CommonSoftware/jcontnc/test/Makefile
@@ -37,7 +37,7 @@ archiveeventsSupplier_LIBS    = baci maciClient maciStubs maci
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       = runHelperTest.sh jcontncTATRunTest.sh runNCSubscriberTests.sh
+SCRIPTS_L       = runHelperTest.sh jcontncTATRunTest.sh runNCSubscriberTests.sh runAnyAideTest.sh
 
 
 #
