improved message in case if NDDSHOME is not set
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@207307 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkDataNT/src/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/src/Makefile
@@ -302,13 +302,13 @@ else
 
 .DEFAULT_GOAL := all	
 all: do_all
-	@echo -e "\e[0;31m!!!!! NDDSHOME is not defined, and thus only code common to old and new BD will be build (ACSERR and IDL) for target all!!!!\e[0m" 
+	@echo -e "\e[0;31mWARNING: NDDSHOME is not defined, and thus only code common to old and new BD will be build (ACSERR and IDL) for target all!!!!\e[0m" 
 
 clean : clean_all
 	@echo " . . . clean done"
 
 install : install_all
-	@echo -e "\e[0;31m!!!!! NDDSHOME is not defined, and thus only code common to old and new BD will be installed (ACSERR and IDL) for target install!!!!\e[0m"
+	@echo -e "\e[0;31mWARNING: NDDSHOME is not defined, and thus only code common to old and new BD will be installed (ACSERR and IDL) for target install!!!!\e[0m"
 	
 endif
 clean_dist : clean_all clean_dist_all 
