improved message in case if NDDSHOME is not set
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@207323 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkDataNT/test/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/test/Makefile
@@ -250,10 +250,10 @@ all:	do_all
 else
 .DEFAULT_GOAL := all	
 all: 
-	@echo " NDDSHOME not defined nothing to be done for target all!" 
+	@echo -e "\e[0;31mWARNING:  NDDSHOME not defined nothing to be done for target: all!\e[0m" 
  
 test: 
-	@echo " NDDSHOME not defined nothing to be done for target test!" 
+	@echo -e "\e[0;31mWARNING:  NDDSHOME not defined nothing to be done for target: test!\e[0m" 
 endif
 
 clean : clean_all 
