ICTJ:ICT-476 Added cyclic buffer functionality and new tests to verify it (test 16)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@207522 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
+++ b/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
@@ -103,7 +103,7 @@ TCL_SCRIPTS_L   =
 PY_SCRIPTS         =
 PY_SCRIPTS_L       = mcTestRegisterDevice mcTestRegisterDeviceWithMultipleSerial  mcTestDeviceWithSeqAndMultipleSerial \
                   mcTestRegisterNonCollocatedDevice \
-						mcTestComponent mcTestPropertiesComponent mcTestDynEnable mcTestDynSuppress mcTestDynInterval \
+						mcTestComponent mcTestCyclicBuffer mcTestPropertiesComponent mcTestDynEnable mcTestDynSuppress mcTestDynInterval \
                   mcTestDynSupEn mcTestAlarmsComponent mcTestArchiveDelta mcTestArchiveDeltaPercent #mcTestManualPublish mcTestManualPublishOnSuppressed
 PY_MODULES         =
 PY_MODULES_L       =
