A RTI/DDS publisher and subscriber copied here from the examples. They can be used to test RTI/DDS without any ACS code.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@207736 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkDataNT/src/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/src/Makefile
@@ -76,7 +76,7 @@ endif
 #
 # C programs (public and local)
 # -----------------------------
-EXECUTABLES     =  bulkDataNTGenSender bulkDataNTGenReceiver bulkDataNTGenReceiverSender
+EXECUTABLES     =  bulkDataNTGenSender bulkDataNTGenReceiver bulkDataNTGenReceiverSender ddsPubTest ddsSubTest
 EXECUTABLES_L   = 
 
 #
@@ -142,6 +142,11 @@ bulkDataNTGenReceiver_LIBS= bulkDataNTReceiver
 
 bulkDataNTGenReceiverSender_OBJECTS = bulkDataNTGenReceiverSender bulkDataNTArrayThread bulkDataNTGenStreamerThread
 bulkDataNTGenReceiverSender_LIBS= bulkDataNTSender bulkDataNTReceiver bulkDataNTThreadUtils bulkDataNTEx
+
+ddsPubTest_OBJECTS=ddsPublisher 
+ddsPubTest_LIBS=nddscpp nddsc nddscore pthread ACSErrTypeCommon
+ddsSubTest_OBJECTS=ddsSubscriber
+ddsSubTest_LIBS=nddscpp nddsc nddscore pthread ACSErrTypeCommon
 
 #
 # Scripts (public and local)
