Updated extpy makefile to replace tar by gtar
Additionally modified the PyXML build parameters to look for expat at $ACSROOT/lib

--- a/LGPL/Tools/extpy/src/Makefile
+++ b/LGPL/Tools/extpy/src/Makefile
@@ -8,7 +8,7 @@
 # who       when      what
 # --------  --------  ----------------------------------------------
 # almamgr 2003-08-27 Removed test and dbl targets
-# almamgr 2003-08-27 Replaced tar with gtar for sun
+# almamgr 2003-08-27 Replaced tar with tar for sun
 # dave 2003-08-25 GENERATEDS is no longer part of the "all" target
 # dave 2003-08-14 added PyXML and generateDS for Python XML entity classes
 # david  07/07/03  created
@@ -33,27 +33,27 @@ PY_DISUTIL	   = pexpect-0.999 PyXML-0.8.4 pychecker-0.8.14 Pmw Numeric-24.2 numa
 
 PEXPECT: pexpect-0.999.tgz
 	@echo "== Building PEXPECT"
-	@gtar -zxvf pexpect-0.999.tgz;
+	@tar -zxvf pexpect-0.999.tgz;
 	@cd pexpect-0.999; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages --install-data=$(INSTALL_ROOT)/lib/python/site-packages ;
 
 PYXML: PyXML-0.8.4.tar.gz
 	@echo "== Building PYXML"
-	@gtar -zxvf PyXML-0.8.4.tar.gz; 
-	@cd PyXML-0.8.4; python setup.py build; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
+	@tar -zxvf PyXML-0.8.4.tar.gz; 
+	@cd PyXML-0.8.4; python setup.py build --with-libexpat=$(ACSROOT)/lib; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
 LXML: lxml-2.2.6.tar.gz
 	@echo "== Building LXML"
-	@gtar -zxvf lxml-2.2.6.tar.gz; 
+	@tar -zxvf lxml-2.2.6.tar.gz; 
 	@cd lxml-2.2.6; python setup.py build; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
 PYXB: PyXB-full-1.1.2.tar.gz
 	@echo "== Building PyXB"
-	@gtar -zxvf PyXB-full-1.1.2.tar.gz;
+	@tar -zxvf PyXB-full-1.1.2.tar.gz;
 	@cd PyXB-1.1.2; patch -p1 < ../pyxb-datatypes-repr.patch;$(PYTHON_ROOT)/bin/python setup.py build; $(PYTHON_ROOT)/bin/python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
 PMW: Pmw.1.2.tar.gz
 	@echo "== Building Python Mega Widgets"
-	@gtar -zxvf Pmw.1.2.tar.gz;
+	@tar -zxvf Pmw.1.2.tar.gz;
 
 #
 # We need a patch for pychecker since the setup.py script
@@ -62,47 +62,47 @@ PMW: Pmw.1.2.tar.gz
 #
 PYCHECKER: pychecker-0.8.14.tar.gz
 	@echo "== Patching and building PyChecker"
-	@gtar -zxvf pychecker-0.8.14.tar.gz;
+	@tar -zxvf pychecker-0.8.14.tar.gz;
 	@patch pychecker-0.8.14/setup.py pychecker-0.8.14.setup.py.patch
 	@cd pychecker-0.8.14; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
 NUMERIC: Numeric-24.2.tar.gz
 	@echo "== Building Numeric"
-	@gtar -zxvf Numeric-24.2.tar.gz;
+	@tar -zxvf Numeric-24.2.tar.gz;
 	@cd Numeric-24.2; patch -p1 < ../Numeric-gettimeofday.patch; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages; 
 
 NUMARRAY: numarray-1.3.3.tar.gz
 	@echo "== Building numarray"
-	@gtar -zxvf numarray-1.3.3.tar.gz;
+	@tar -zxvf numarray-1.3.3.tar.gz;
 	@cd numarray-1.3.3; python setup.py install --gencode; 
 
 LDAP: python-ldap-2.0.1.tar.gz
 	@echo "== Building Python LDAP"
-	@gtar -zxvf python-ldap-2.0.1.tar.gz;
+	@tar -zxvf python-ldap-2.0.1.tar.gz;
 	@cd python-ldap-2.0.1; cat setup.cfg | sed 's/local\/openldap-REL_ENG_2_1\///' >> setup.cfg.tmp
 	@mv python-ldap-2.0.1/setup.cfg.tmp python-ldap-2.0.1/setup.cfg 
 	@cd python-ldap-2.0.1; python setup.py install;
 
 GNUPLOT: gnuplot-py-1.7.tar.gz
 	@echo "== Building GnuPlot Py"
-	@gtar -zxvf gnuplot-py-1.7.tar.gz;
+	@tar -zxvf gnuplot-py-1.7.tar.gz;
 	@cd gnuplot-py-1.7; python setup.py install;
 
 SNMP: pysnmp-2.0.9.tar.gz
 	@echo "== Building PySNMP"
-	@gtar -zxvf pysnmp-2.0.9.tar.gz;
+	@tar -zxvf pysnmp-2.0.9.tar.gz;
 	@cd pysnmp-2.0.9; python setup.py install;
 
 SUDS: suds-0.4.tar.gz
 	@echo "== Building suds"
-	@gtar -zxvf suds-0.4.tar.gz;
+	@tar -zxvf suds-0.4.tar.gz;
 	@cd suds-0.4; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
 #
 # list all python tarballs
 # ------------------------------
 PY_DOC :
-	$(foreach file, $(PY_EXT_DOC_L), - $(AT) cd ../doc; if [ -e $(file).tgz ]; then echo "== Extracting external documentation: $(file).tgz"; gtar -zxvf $(file).tgz; fi )
+	$(foreach file, $(PY_EXT_DOC_L), - $(AT) cd ../doc; if [ -e $(file).tgz ]; then echo "== Extracting external documentation: $(file).tgz"; tar -zxvf $(file).tgz; fi )
 
 
 #PY_DISUTIL_BUILD : PEXPECT PYXML PYCHECKER NUMERIC NUMARRAY LDAP GNUPLOT SNMP PYXML
