Added extra libraries to link task binaries

--- a/LGPL/CommonSoftware/task/src/Makefile
+++ b/LGPL/CommonSoftware/task/src/Makefile
@@ -41,7 +41,8 @@ EXECUTABLES_L   =
 #
 # <brief description of xxxxx program>
 taskRunner_OBJECTS   = taskRunner
-taskRunner_LIBS      = taskComponentStubs staticContainer characteristicTaskStubs taskErrType baciStubs xerces-c
+taskRunner_LIBS      = taskComponentStubs staticContainer characteristicTaskStubs taskErrType baciStubs xerces-c \
+		ACE TAO TAO_PortableServer maci loki logging baselogging acserr acserrStubs
 
 #
 # special compilation flags for single c sources
