Added missing libraries to link against

--- a/LGPL/CommonSoftware/acsutil/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acsutil/ws/src/Makefile
@@ -72,7 +72,7 @@ LIBRARIES       = acsutil
 LIBRARIES_L     =
 
 acsutil_OBJECTS	= acsutilWildcard acsutilFindFile acsutilLL acsutilTempFile acsutilPortsImpl acsutilAnyAide acsutilTimeStamp acsutilORBHelper
-acsutil_LIBS    = acscommonStubs
+acsutil_LIBS    = acscommonStubs TAO_DynamicAny
 
 #
 # Scripts (public and local)
